fixed an overflow with a fixed height

--- a/app/assets/stylesheets/contact.scss
+++ b/app/assets/stylesheets/contact.scss
@@ -19,6 +19,11 @@ hr {
   margin: 0 150px;
 }
 
+p.person_title {
+  height: 40px;
+  overflow: visible;
+}
+
 /* Icon Grow Rotate */
 /* Icon Grow Rotate */
 .hvr-icon-grow-rotate {
